--- a/sites/all/themes/summa-revamp/css/hp-slideshow/hp-slideshow_style_640up.scss
+++ b/sites/all/themes/summa-revamp/css/hp-slideshow/hp-slideshow_style_640up.scss
@@ -14,19 +14,31 @@ $leftPadding: 33px;
 
     // same as .views-row
     .slide {
-      width: 100%;
       height: 613px;
       //float: left;
       margin: 0 auto;
-      .slide-safe-container {
-        position: relative;
-        width: 1000px;
-        margin: 0 auto;
+
+      .slide-wrapper {
+        width: 1500px;
+        height: 613px;
+        margin: 0;
+        .slide-safe-container {
+          width: 1000px !important;
+          float: left;
+          margin: 0 auto;
+        }
       }
     }
   }
+  .bxSlider-container {
+    width: 2000px;
+    text-align: left;
+  }
   .bx-wrapper .bx-pager, .bx-wrapper .bx-controls-auto {
     bottom: 96px;
+  }
+  .bx-wrapper .bx-pager {
+    width: 1000px;
   }
 
   .views-field-title {
@@ -68,8 +80,8 @@ $leftPadding: 33px;
 
   /* Image */
   .views-field-entity-id {
-    right: 0;
-    width: 492px;
+    left: 508px;
+    width: auto;
     overflow: visible;
     position: absolute;
     z-index: 30;
