--- a/sites/all/themes/summa-revamp/css/hp-slideshow/hp-slideshow_style_base.scss
+++ b/sites/all/themes/summa-revamp/css/hp-slideshow/hp-slideshow_style_base.scss
@@ -12,6 +12,7 @@ $slideshow-green: #97ac24;
     overflow: hidden;
     height: 1262px;
     // same as .views-row
+    width: 100%;
     .slide {
       width: 100%;
       float: left;
